# dphpc-gemm

./: .gitignore  CMakeLists.txt  GRAPHING.md  Makefile  NOTES.md  README.md  cli-cache.md  cli-cache.txt  cutlass_gemm_tunable2  graphing.py  ncu.sbatch  ncu_analysis  ncu_analysis.csv  ncu_benchmark.sbatch  ncu_benchmark_output.csv  nsys.log.nsys-rep  nsys.log.sqlite  nsys.sbatch  profile_build.sh
SLURM/: device_query.sbatch  run.sbatch  run_autotune.sbatch  run_wmma.sbatch
cmake/: cuda_glibc_compat.h
config/: config.example.sh
include/: utils.hpp
output/: 8488.err  wmma_6697.err  wmma_6701.err  wmma_6702.err  wmma_6703.err  wmma_6704.err  wmma_6705.err  wmma_6706.err  wmma_6707.err  wmma_6708.err
po2/: gemm_cpasync.h  test  testing.cu
slurm/: job-cute.sh
small_k/small_k/: check10048_10048_64  check8192_8192_56  check8192_8192_64  minimal.cuh  out10048_10048_64  out8192_4096_128  out8192_4096_256  out8192_4096_32  out8192_4096_64  out8192_8192_128  out8192_8192_64  test  testing.cu  verify  verify.cu
src/: cudaTensorCoreGemm.cu  cutlass_gemm.cu  cutlass_gemm_autotuner.cu  cutlass_gemm_tunable.cu  cutlass_gemm_tunable2.cu  device_query.cu  globals.h  main.cpp  wmma_gemm.cu
src/backend/cute/: Makefile  README.md  backend_adaptor.cpp  gemm.cu  gemm_streamk_ref.cu  gemm_universal.cu  gemm_universal.hpp  layouts.cu  parse_streamk_results.py  parse_streamk_results_K.py  plan.hpp  registry.cpp  sgemm.cu  wave_quantization_streamk.sh  wave_quantization_streamk.txt  wave_quantization_streamk_Ksweep.sh  wave_quantization_streamk_Ksweep.txt
src/backend/cutlass/: backend_adaptor.hpp  registry.cpp
src/backend/wmma/: backend_adaptor.hpp  registry.cpp
src/bindings/nanobind/: module.cpp
src/core/: device_query.cpp  device_query.hpp  dispatcher.cpp  dispatcher.hpp  plan.hpp  planner.hpp  problem.cpp  problem.hpp
src/eval/: bench.h  verify.h
src/utils/: cuda_check.hpp  data.cpp  data.hpp  timing.hpp
